# pystockopt

./: .gitignore  MSFT_price_history_2021-01-05.csv  MSFT_price_history_2021-10-05.csv  MSFT_price_history_None.csv  option.py  pltr_call_options.csv  pyproject.toml  trade.py
pystockopt/: main.py  option.py  position.py  riskprofile.py  security.py  stock.py  test_options.py  test_stocks.py  utils.py
