[tool.poetry]
name = "pystockopt"
version = "0.1.0"
description = ""
authors = ["Misael Valentin <misael.vf2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.59"
requests-cache = "^0.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
