[tool.poetry]
name = "pystockopt"
version = "0.1.0"
description = ""
authors = ["Misael Valentin <misael.vf2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.59"
requests-cache = "^0.6.3"
pylint = "^2.11.1"
pep8 = "^1.7.1"
pycodestyle = "^2.7.0"
autopep8 = "^1.5.7"
rich = "^10.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
